--- a/TestReflector/TestMainManage/TestMainManage.csproj
+++ b/TestReflector/TestMainManage/TestMainManage.csproj
@@ -41,9 +41,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ItemConfig.cs" />
+    <Compile Include="Model_AutoMeteoTask.cs" />
     <Compile Include="PluginManage.cs" />
     <Compile Include="PluginPyConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TaskManage.cs" />
+    <Compile Include="TaskStep.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TestBase\TestBase.csproj">
@@ -58,6 +61,9 @@
       <Project>{6908948e-3c61-4580-bbf9-39623edd82bd}</Project>
       <Name>Test</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="AutoMeteoTask.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
